<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="randy_chen.weathertw4.SearchActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/future_info_table_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*">

                <TableRow android:layout_column="1">

                    <Button android:text="@string/time" />

                    <Button android:text="@string/temperature" />

                    <Button android:text="@string/status" />

                    <Button android:text="@string/rain_chance" />
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>